--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
           <li id="nav-2"><a href="#about">About</a></li>
           <li id="nav-3"><a href="#skills">Skills</a></li>
           <li id="nav-4"><a href="#projects">Projects</a></li>
-          <li id="nav-1"><a href="#contact">Contact</a></li>
+          <li id="nav-5"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+    </div>
+    <!-- Menu Bars -->
+    <div class="menu-bars" id="menu-bars">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
     </div>
     <!-- Sections -->
     <section id="home">
